# code-templates

./: .gitmodules  README.md
code_templates/cpp/: CMakeLists.txt  Doxyfile  Makefile
code_templates/cpp/config/: config.hpp  config.hpp.in
code_templates/cpp/src/utils/: CMakeLists.txt  Makefile  example.cpp  exceptions.h  exceptions.hpp  log.cpp  log.hpp
code_templates/cpp/tests/: test_example.cpp  test_log.cpp
code_templates/cpp_cmake/: CMakeLists.txt
code_templates/cpp_cmake/config/: config.h.in
code_templates/cpp_cmake/src/: CMakeLists.txt
code_templates/cpp_cmake/src/utils/: example.hpp  exceptions.hpp  log.cpp  log.hpp
code_templates/cpp_cmake/tests/: CMakeLists.txt  test_log.cpp
